traefik/ingressroute.yaml
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: simpleingressroute
#spec:
#  entryPoints:
#    - web
#  routes:
#  - match: Host(`c`) && PathPrefix(`/notls`)
#    kind: Rule
#    services:
#    - name: whoami
#      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simepleingress
spec:
  ingressClassName: traefik
  rules:
    - host: who.qikqiak.com
      http:
        paths:
          - path: /notls
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
